# pasir

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES  build.rs  craft.yml  docker-bake.hcl  flake.nix  llvm-config  php_info.rs  rustfmt.toml
.cargo/: config.toml
.github/workflows/: binaries.yml  docker.yml  rust.yml
crates/pasir_build/: Cargo.toml
crates/pasir_build/src/: api_version.rs  lib.rs  php_info.rs
crates/pasir_sapi/: Cargo.toml  build.rs
crates/pasir_sapi/src/: context.rs  error.rs  ext.rs  lib.rs  util.rs  variables.rs
crates/pasir_sys/: Cargo.toml  build.rs  pasir.h
crates/pasir_sys/src/: lib.rs
docker/: musl.Dockerfile
patches/: accel_find_sapi.patch  accel_find_sapi.php
recipes/drupal/: pasir.toml
src/: config.rs  context.actix.rs  error.rs  lib.rs  main.rs  response.rs  server.rs  unbound_channel.rs  worker.rs
src/cli/: info.rs  mod.rs  module.rs  serve.rs
src/config/: mod.rs  route.rs
src/sapi/: context.rs  ext.rs  mod.rs  module.rs  util.rs  variables.rs
src/service/: combined_log_format.rs  mod.rs  php.rs  router.rs  serve_php.rs
src/util/: mod.rs  request_ext.rs  response_ext.rs
tests/: cli.rs
tests/fixtures/: routes.toml
