[package]
name = "pasir"
version = "0.5.2"
edition = "2024"
description = "PHP Application Server In Rust"
repository = "https://github.com/el7cosmos/pasir"
license = "GPL-3.0-or-later"
keywords = ["php", "sapi", "http"]
categories = ["web-programming::http-server"]
build = "build/mod.rs"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
clap = { version = "4.5.48", features = ["color", "help", "usage", "error-context", "suggestions", "derive", "env", "string"] }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
ext-php-rs = { version = "0.14.2", default-features = false, features = ["embed"] }
futures-util = { version = "0.3.31", default-features = false }
headers = "0.4.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.17", features = ["server-auto", "service", "tokio", "server-graceful"] }
nu-ansi-term = "0.50.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "net", "rt-multi-thread", "signal"] }
toml = "0.9.8"
tower = { version = "0.5.2", features = ["timeout", "util"] }
tower-http = { version = "0.6.6", features = ["add-extension", "fs", "request-id", "set-header", "trace", "util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["ansi"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
proptest = "1.8.0"
rstest = { version = "0.26.1", default-features = false }

[build-dependencies]
anyhow = "1.0.100"
bindgen = { version = "0.72.1", default-features = false }
cargo-manifest = "0.19.1"
serde_json = "1.0.145"
which = "8.0.0"

[features]
default = ["bindgen/runtime"]
clang_static = ["bindgen/static"]
static = []

[patch.crates-io]
ext-php-rs = { git = "https://github.com/el7cosmos/ext-php-rs.git", branch = "static" }

[profile.dev]
debug = true

[package.metadata]
allowlist_item = [
    "PHP_INFO_ALL",
    "PHP_INFO_CREDITS",
    "PHP_VERSION",
    "module_registry",
    "php_handle_aborted_connection",
    "php_handle_auth_data",
    "php_output_end_all",
    "php_output_startup",
    "php_print_info",
    "php_register_variable",
    "php_tsrm_startup_ex",
    "zend_error",
    "zend_extension",
    "zend_extensions",
    "zend_shutdown_strtod",
    "zend_update_current_locale"
]
blocklist_Item = [
    "HashTable",
    "_zend_array",
    "_zend_llist",
    "_zend_llist_element",
    "_zval_struct",
    "zend_array",
    "zend_llist",
    "zend_llist_element",
    "zval",
]
