[package]
name = "pasir"
version = "0.5.4"
edition.workspace = true
description = "PHP Application Server In Rust"
repository.workspace = true
license = "GPL-3.0-or-later"
keywords = ["php", "sapi", "http"]
categories = ["web-programming::http-server"]
build = "build/mod.rs"

[workspace]
members = [
    "crates/pasir_build",
    "crates/pasir_sys",
]

[workspace.package]
edition = "2024"
repository = "https://github.com/el7cosmos/pasir"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.100"
ext-php-rs = { version = "0.15.1", default-features = false }

[dependencies]
anyhow.workspace = true
bytes = "1.10.1"
clap = { version = "4.5.50", features = ["color", "help", "usage", "error-context", "suggestions", "derive", "env", "string"] }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
ext-php-rs = { workspace = true, features = ["embed"] }
futures-util = { version = "0.3.31", default-features = false }
headers = "0.4.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.17", features = ["server-auto", "service", "tokio", "server-graceful"] }
nu-ansi-term = "0.50.3"
pasir_sys = { version = "0.1.0", path = "crates/pasir_sys", default-features = false }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "signal"] }
toml = "0.9.8"
tower = { version = "0.5.2", features = ["timeout", "util"] }
tower-http = { version = "0.6.6", features = ["add-extension", "fs", "request-id", "set-header", "trace", "util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["ansi"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
proptest = "1.9.0"
rstest = { version = "0.26.1", default-features = false }

[build-dependencies]
anyhow.workspace = true
pasir_build = { version = "0.1.0", path = "crates/pasir_build" }
serde_json = "1.0.145"

[features]
default = ["ext-php-rs/runtime", "pasir_sys/runtime"]
clang_static = ["ext-php-rs/static", "pasir_sys/static"]
static = []

[profile.dev]
debug = true
