[package]
name = "pasir"
version = "0.6.0"
edition.workspace = true
description = "PHP Application Server In Rust"
repository.workspace = true
license.workspace = true
keywords = ["php", "sapi", "http"]
categories = ["web-programming::http-server"]
build = "build/mod.rs"

[workspace]
members = [
    "crates/pasir_build",
    "crates/pasir_sapi",
    "crates/pasir_sys",
]

[workspace.package]
edition = "2024"
repository = "https://github.com/el7cosmos/pasir"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.100"
ext-php-rs = { version = "0.15.1", default-features = false }
pasir_build = { version = "0.1.0", path = "crates/pasir_build" }
pasir_sapi = { version = "0.1.0", path = "crates/pasir_sapi" }
pasir_sys = { version = "0.1.0", path = "crates/pasir_sys", default-features = false }
rstest = { version = "0.26.1", default-features = false }
thiserror = "2.0.17"
tracing = "0.1.44"

[dependencies]
anyhow.workspace = true
bytes = "1.10.1"
clap = { version = "4.5.51", features = ["color", "help", "usage", "error-context", "suggestions", "derive", "env", "string"] }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
ext-php-rs = { workspace = true, features = ["embed"] }
futures-util = { version = "0.3.31", default-features = false }
headers = "0.4.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.17", features = ["server-auto", "service", "tokio", "server-graceful"] }
nu-ansi-term = "0.50.3"
pasir_sapi = { workspace = true, features = ["tracing"] }
pasir_sys.workspace = true
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror.workspace = true
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "signal"] }
toml = "0.9.8"
tower = { version = "0.5.2", features = ["timeout", "util"] }
tower-http = { version = "0.6.6", features = ["add-extension", "fs", "request-id", "set-header", "trace", "util"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["ansi"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
proptest = "1.9.0"
rstest.workspace = true

[build-dependencies]
anyhow.workspace = true
pasir_build.workspace = true
serde_json = "1.0.145"

[features]
default = ["ext-php-rs/runtime", "pasir_sys/runtime"]
clang_static = ["ext-php-rs/static", "pasir_sys/static"]
static = []

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[lints]
workspace = true

[profile.dev]
debug = true
