[package]
name = "pasir_sapi"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ext-php-rs = { workspace = true, features = ["embed"] }
libc = "0.2.180"
pasir_sys = { workspace = true, features = ["default"] }
thiserror.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true

[build-dependencies]
anyhow.workspace = true
pasir_build.workspace = true

[features]
tracing = ["dep:tracing"]

[lints]
workspace = true
